# zmq-cli

./: .gitignore  Cargo.toml  README.md
.cargo/: .config.swp  config
src/: chat.rs  communication.rs  lib.rs  main.rs  socket.rs  validation.rs
tests/: integration_tests.rs  test_config.json
