[package]
name = "rzmq"
version = "0.1.0"
authors = ["Grzegorz <grzegorz.bartoszek@thaumatec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
zmq = "0.9"

[dev-dependencies]
assert_cmd = "0.11"
nonblock = "0.1.0"