[package]
name = "rzmq"
version = "0.1.0"
authors = ["Grzegorz <grzegorz.bartoszek@thaumatec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
clap = "2.33.0"
zmq = "0.9"
rustyline = "5.0.3"
regex = "1.3.1"

[dev-dependencies]
assert_cmd = "0.11"
nonblock = "0.1.0"

